refactor : Dealer를 Participants에 추가했을 때 예상